@@ -1,5 +1,11 @@
 2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/groff/tests/check-delimiter-validity.sh: Add unit
+	test for foregoing change to delimiters accepted when reading a
+	delimited name.
+
+2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/roff/troff/input.cpp (read_delimited_name): Stop accepting
 	horizontal motion tokens as escape sequence delimiters.  This to
 	prohibit use of the delimited `\h` escape sequence as a
